@@ -1,0 +1,3 @@
+<p>ვეპხის ტყაოსანი შოთა რუსთაველი</p>
+<p>我能吞下玻璃而不伤身体。</p>
+<p>मैं काँच खा सकता हूँ, मुझे उस से कोई पीडा नहीं होती</p>
