@@ -1,0 +1,5 @@
+ვეპხის ტყაოსანი შოთა რუსთაველი
+
+我能吞下玻璃而不伤身体。
+
+मैं काँच खा सकता हूँ, मुझे उस से कोई पीडा नहीं होती
