@@ -21,6 +21,8 @@ New Features:
 Bugfixes:
 
   * "{{ns:}}" should return the same value as "{{ns:0}}" to match Mediawiki.
+  * Topic exports containing UTF-8 should not escape unicode characters.
+    Reported by cstenkes.
 
 Translation Updates:
 
